--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="keywords" content="">
-    <meta name="description" content="descrição">
+    <!--<meta name="description" content="descrição">-->
     <meta property="og:title" content="Luana Albertoni">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:type" content="website">
