editando área de experiencias profissionais

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
             <div class="nav-menu">
                 <ul>
-                    <li><a href="index.html" class="text-section">Início</a></li>
-                    <li><a href="sobre.html" class="text-section">Sobre nós</a></li>
-                    <li><a href="servicos.html" class="text-section">Serviços</a></li>
-                    <li><a href="blog.html" class="text-section">Blog</a></li>
-                    <li><a href="contato.html" class="text-section">Contato</a></li>
+                    <li><a href="#conhecimentos">Conhecimentos</a></li>
+                    <li><a href="#idiomas">Idiomas</a></li>
+                    <li><a href="#hobbies">Hobbies</a></li>
+                    <li><a href="#experiencia">Experiência Profissional</a></li>
+                    <li><a href="#portfolio">Portfólio</a></li>
                 </ul>
             </div>
         </div>
@@ -98,7 +98,7 @@
                     <li><a href="#idiomas">Idiomas</a></li>
                     <li><a href="#hobbies">Hobbies</a></li>
                     <li><a href="#experiencia">Experiência Profissional</a></li>
-                    <li><a href="#portfolio">Portifólio</a></li>
+                    <li><a href="#portfolio">Portfólio</a></li>
                 </ul>
             </div>
 
@@ -364,7 +364,8 @@
                 <div class="content-experience">
                     <div class="content-inner">
                         <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            Desenvolvimento de sites usando HTML5, CSS3 e JavaScript,<br />
+                            Tutoria técnica de estagiários.
                         </p>
                     </div>
                 </div>
@@ -383,13 +384,13 @@
 
                 </div>
 
-                <div class="content-experience">
+                <!--<div class="content-experience">
                     <div class="content-inner">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                         </p>
                     </div>
-                </div>
+                </div>-->
             </div>
 
             <div class="acc">
@@ -405,13 +406,13 @@
 
                 </div>
 
-                <div class="content-experience">
+                <!--<div class="content-experience">
                     <div class="content-inner">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                         </p>
                     </div>
-                </div>
+                </div>-->
             </div>
 
             <div class="acc">
@@ -430,7 +431,8 @@
                 <div class="content-experience">
                     <div class="content-inner">
                         <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                            Trabalhei como Sr. Barista, Consultor, Gerente e Facilitador de Workshops na região de Londrina por vários anos como especialista em cafés e cafeterias.<br />
+                            Alguns dos lugares onde trabalhei: Scada Café, Moca Café & Arte, Cafeteria Odebrecht Gourmet, Madame Brulee e Baru Confeitaria Criativa
                         </p>
                     </div>
                 </div>
