Arrumando section de conhecimentos

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                                 </div>
                             </div>
-                            <div id="flip-card-back">Intemediário</div>
+                            <div id="flip-card-back">Básico</div>
                         </div>
                     </div>
 
