atualizando experiencia profissional

--- a/index.html
+++ b/index.html
@@ -351,10 +351,33 @@
             <div class="acc">
                 <div class="click-area">
                     <div class="texto">
-                        <h4>Desenvolvedora Front-End <span>@ codie.digital</span></h4>
-                        <p>2020 - atualmente</p>
+                        <h4>Estagiaria de Desenvolvimento de Software <span>@ Sky.One Solutions</span></h4>
+                        <p>2021 - atualmente</p>
                     </div>
 
+                    <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.5 0.754975C15.219 0.475599 14.8388 0.318787 14.4425 0.318787C14.0462 0.318787 13.6661 0.475599 13.385 0.754975L8.00001 6.06498L2.69001 0.754975C2.40897 0.475599 2.02879 0.318787 1.63251 0.318787C1.23624 0.318787 0.856058 0.475599 0.575015 0.754975C0.434422 0.89442 0.32283 1.06032 0.246677 1.24311C0.170524 1.4259 0.131317 1.62196 0.131317 1.81998C0.131317 2.01799 0.170524 2.21405 0.246677 2.39684C0.32283 2.57963 0.434422 2.74553 0.575015 2.88498L6.93501 9.24498C7.07446 9.38557 7.24036 9.49716 7.42315 9.57331C7.60594 9.64947 7.802 9.68867 8.00001 9.68867C8.19803 9.68867 8.39409 9.64947 8.57688 9.57331C8.75967 9.49716 8.92557 9.38557 9.06501 9.24498L15.5 2.88498C15.6406 2.74553 15.7522 2.57963 15.8284 2.39684C15.9045 2.21405 15.9437 2.01799 15.9437 1.81998C15.9437 1.62196 15.9045 1.4259 15.8284 1.24311C15.7522 1.06032 15.6406 0.89442 15.5 0.754975Z" fill="#FAFAFA" />
+                    </svg>
+
+                </div>
+
+                <div class="content-experience">
+                    <div class="content-inner">
+                        <p>
+                            Treinamentos de AWS<br />
+                            Atualmente trabalhando no produto Integra.Sky como foco em Front-End com React.Js
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="acc">
+                <div class="click-area">
+                    <div class="texto">
+                        <h4>Desenvolvedora Front-End <span>@ Codie digital</span></h4>
+                        <p>2020 - 2021</p>
+                    </div>
+                    
                     <svg width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.5 0.754975C15.219 0.475599 14.8388 0.318787 14.4425 0.318787C14.0462 0.318787 13.6661 0.475599 13.385 0.754975L8.00001 6.06498L2.69001 0.754975C2.40897 0.475599 2.02879 0.318787 1.63251 0.318787C1.23624 0.318787 0.856058 0.475599 0.575015 0.754975C0.434422 0.89442 0.32283 1.06032 0.246677 1.24311C0.170524 1.4259 0.131317 1.62196 0.131317 1.81998C0.131317 2.01799 0.170524 2.21405 0.246677 2.39684C0.32283 2.57963 0.434422 2.74553 0.575015 2.88498L6.93501 9.24498C7.07446 9.38557 7.24036 9.49716 7.42315 9.57331C7.60594 9.64947 7.802 9.68867 8.00001 9.68867C8.19803 9.68867 8.39409 9.64947 8.57688 9.57331C8.75967 9.49716 8.92557 9.38557 9.06501 9.24498L15.5 2.88498C15.6406 2.74553 15.7522 2.57963 15.8284 2.39684C15.9045 2.21405 15.9437 2.01799 15.9437 1.81998C15.9437 1.62196 15.9045 1.4259 15.8284 1.24311C15.7522 1.06032 15.6406 0.89442 15.5 0.754975Z" fill="#FAFAFA" />
                     </svg>
@@ -385,12 +408,12 @@
                 </div>
 
                 <!--<div class="content-experience">
-                    <div class="content-inner">
-                        <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                        </p>
-                    </div>
-                </div>-->
+            <div class="content-inner">
+                <p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                </p>
+            </div>
+        </div>-->
             </div>
 
             <div class="acc">
@@ -407,12 +430,12 @@
                 </div>
 
                 <!--<div class="content-experience">
-                    <div class="content-inner">
-                        <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                        </p>
-                    </div>
-                </div>-->
+            <div class="content-inner">
+                <p>
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+                </p>
+            </div>
+        </div>-->
             </div>
 
             <div class="acc">
